--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["dom", "es2016"],
     "jsx": "react",
     "strict": true,
+    "sourceMap": true,
     "noUnusedParameters": true,
     "noUnusedLocals": true,
     "noEmitHelpers": true,
