--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "tslib": "^1.9.0"
   },
   "devDependencies": {
+    "@types/chrome": "^0.0.65",
     "@types/react": "^16.3.1",
     "@types/react-dom": "^16.0.4",
     "copy-webpack-plugin": "^4.5.1",
