--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mobx-react": "^5.0.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "styled-components": "^3.2.6",
     "tslib": "^1.9.0"
   },
   "devDependencies": {
@@ -21,11 +22,8 @@
     "@types/react": "^16.3.1",
     "@types/react-dom": "^16.0.4",
     "copy-webpack-plugin": "^4.5.1",
-    "css-loader": "^0.28.11",
     "prettier": "^1.11.1",
     "react-svg-loader": "^2.1.0",
-    "sass-loader": "^7.0.1",
-    "style-loader": "^0.21.0",
     "ts-loader": "^4.2.0",
     "ts-node": "^5.0.1",
     "tslint": "^5.9.1",
