--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
         }
     ],
     "web_accessible_resources": [
-      "script.js"
+      "script.js", "inject.js"
     ],
     "permissions": [
     ]
