fix: WebWorkerが読み込めない問題への対処がしたい  - Same Origin Policyがうんたら  - じゃあloader.tsでワーカー読み込んでDOM経由で渡せばいいんじゃね

--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
         }
     ],
     "web_accessible_resources": [
-      "script.js", "inject.js", "worker.js"
+      "script.js", "inject.js", "commentfilter_worker.js"
     ],
     "permissions": [
     ]
