update: webpack.config.js

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "start": "npm run watch",
     "watch:local": "cross-env LOCAL=1 webpack-serve --config ./webpack.config.js --mode development",
-    "watch": "webpack --config ./webpack.config.js --mode development" ,
-    "build": "webpack --config ./webpack.config.js --mode production",
+    "watch": "webpack --config ./webpack.config.js --mode development",
+    "build": "cross-env NODE_ENV=production webpack --config ./webpack.config.js --mode production",
     "clean": "rm -rf extension & rm -rf debug"
   },
   "dependencies": {
